finished hallway and added doorclose sound

--- a/GSD3/GSD3.CSharp.csproj
+++ b/GSD3/GSD3.CSharp.csproj
@@ -84,6 +84,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\RunningPersonTriggerController.cs" />
     <Compile Include="Assets\Scipts\PlayerController.cs" />
     <Compile Include="Assets\Scipts\SoundTriggerController.cs" />
     <Compile Include="Assets\Scipts\WallController.cs" />
